--- a/PARTIALS/modal_modify_tables.ejs
+++ b/PARTIALS/modal_modify_tables.ejs
@@ -31,26 +31,26 @@
             <div id="add-user" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
 
-                <form>
+                <form role = "form" action = "/admin/addUser" method = "post">
                   <div class = "well well-sm">
                     Adding to User Table
                   </div>
                   <div class="form-group">
-                    <input type="name" class="form-control input-lg" id="exampleInputEmail1" placeholder="name">
+                    <input type="usersName" name="usersName" class="form-control input-lg" id="exampleInputEmail1" placeholder="name">
                   </div>
                   <div class="form-group">
-                    <input type="address" class="form-control input-lg" id="exampleInputEmail1" placeholder="address">
+                    <input type="address" name="address" class="form-control input-lg" id="exampleInputEmail1" placeholder="address">
                   </div>
                   <div class="form-group">
-                    <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="email">
+                    <input type="email" name="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="email">
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="password">
+                    <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="password">
                   </div>
                   <div class="form-group">
-                    <input type="isStaff" class="form-control input-lg" id="exampleInputEmail1" placeholder="isStaff">
+                    <input type="isStaff" name="isStaff" class="form-control input-lg" id="exampleInputEmail1" placeholder="isStaff">
                   </div>
-                  <button type="submit" class="btn btn-default btn-block btn-lg">Add</button>
+                  <button type="submit" value="Send" class="btn btn-default btn-block btn-lg">Add</button>
                 </form>
 
               </div>
