--- a/PARTIALS/modal_edit_account.ejs
+++ b/PARTIALS/modal_edit_account.ejs
@@ -38,7 +38,7 @@
                   </div>
                   <div>
                     <hr>
-                  <div>
+                  </div>
                   <div class = "form-group">
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
@@ -74,7 +74,7 @@
                   </div>
                   <div>
                     <hr>
-                  <div>
+                  </div>
                   <div class = "form-group">
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
@@ -128,7 +128,7 @@
                   </div><!-- password field -->
                   <div>
                     <hr>
-                  <div>
+                  </div>
                   <div class = "form-group">
                     <input type = "email" name = "email" class = "form-control input-lg" id = "exampleInputEmail1" placeholder = "Enter your current email to make changes">
                   </div>
@@ -161,7 +161,7 @@
                   <div class = "form-group">
                     <input type = "password" name = "password" class = "form-control input-lg" id = "exampleInputPassword1" placeholder = "Enter your current password to make changes">
                   </div>
-                  <button type = "submit" class = "btn btn-default btn-block btn-lg btn-danger" value = "Send">Delete Account</button>
+                  <button type = "submit" class = "btn btn-default btn-block btn-lg" value = "Send">Delete Account</button>
                 </form>
 
               </div>
